DolphinNavigatorsWidgetAction: Show separator when navigator is outside of menubar

When navigator is outside of menubar, we should show separator under
it to make it visually easier to understand it's a clickable area.

This adds a small separator, that will be disabled when
the navigator is moved back to menubar, or when menubar
is editable.

BUG: 508303